# aoc2024

./: CMakeLists.txt  build_all.sh
day01/: live_data.hpp  main.cpp  test_data.hpp
